---
title: edu.nust.game.scenes.levelscene.gameobjects.weapon
config:
  look: classic
  layout: elk
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
  class Weapon
  class AmmoBar
  class Bullet
  class Ammo
  class BulletImpact
  class ImpactType <<enumeration>>
AmmoBar --> Ammo : uses
Bullet --> BulletImpact : uses
BulletImpact --> ImpactType : uses
Weapon --> Ammo : uses
Weapon --> Bullet : uses